# wasp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.sh
demo/: demo.c  demo.h  entity.h  game.c  game.h  input_map.h  level_test.c  levels.c  levels.h  scene_editor.c  scene_monument.c  scene_wizard.c  system_events.c  system_events.h  test_behaviors.c  test_behaviors.h
include/: camera.h  draw.h  entity.h  file.h  game.h  gl.h  graphics.h  image.h  input.h  instance_attributes.h  light.h  material.h  model.h  render_target.h  renderer.h  shader.h  status.h  system_events.h  texture.h  thread.h  vertex.h  wasm.h  wasp.h
include/wasm/GL/: gl.h
include/wasm/SDL3/: SDL.h  SDL_keycode.h  SDL_stdinc.h
lib/galogen/: LICENSE  galogen.c
src/: camera.c  draw.c  file.c  game.c  graphics.c  image.c  input.c  instance_attributes.c  light.c  material.c  model.c  render_target.c  renderer.c  shader.c  system_events.c  texture.c  thread.c  vertex.c  wasm.c
src/data/: inline_primitives.h  inline_shaders.h
src/loaders/: obj.c  obj.h
src/model/: grid.c  mesh.c  primitive.c  sprites.c
src/native/: main.c  ui.h
src/wasm/: events.c  gl.c  sdl.c  stdio.c
tst/: spec_main.c
web/: game.wasm  index.html  server.bat
web/css/: style.css
web/js/: game.js  main.js
web/js/bind/: wasm_base.js  wasm_const.js  wasm_gl.js  wasm_image.js  wasm_stdio.js
web/res/shaders/: basic_deferred.frag  basic_deferred.vert  basic_gbuf.frag  frame.frag  frame.vert  light.frag  light.vert  light_inst.vert  passthrough.frag  pbr_gbuf.frag  warhol.frag  warhol.vert
